# weq

./: CMakeLists.txt  Makefile  README.md
include/glad/: glad.h
include/weq/: Application.hpp  Camera.hpp  Common.hpp  Cubemap.hpp  EmbeddedData.hpp  Engine.hpp  FlatBuffer.hpp  Hotloader.hpp  Mesh.hpp  MeshData.hpp  Node.hpp  Renderable.hpp  RunningAverage.hpp  Texture.hpp  Window.hpp  precompiled.hpp
include/weq/component/: Camera.hpp  ImGui.hpp  Renderable.hpp  Transform.hpp  Wave.hpp
include/weq/ecs/: Component.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  Fwd.hpp  Receiver.hpp  Signal.hpp  System.hpp  SystemManager.hpp  TypeId.hpp
include/weq/event/: DebugDraw.hpp  Hotloader.hpp  Input.hpp  Internal.hpp  RegisterInput.hpp  Renderer.hpp  Window.hpp
include/weq/gl/: Buffer.hpp  Cubemap.hpp  DrawModes.hpp  Framebuffer.hpp  RenderState.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  VertexArray.hpp  VertexFormat.hpp
include/weq/memory/: CircularList.hpp  PoolAllocator.hpp  Resource.hpp  ResourceManager.hpp  StackAllocator.hpp
include/weq/primitive/: Circle.hpp  Cube.hpp  Plane.hpp  Ray.hpp  Sphere.hpp  Vector.hpp
include/weq/resource/: Resource.hpp  ResourceManager.hpp
include/weq/simd/: Defines.hpp  constants.hpp  matrix.hpp  vector.hpp  vector_functions.hpp
include/weq/state/: State.hpp  StateManager.hpp
include/weq/system/: Camera.hpp  DebugDraw.hpp  Hotloader.hpp  Input.hpp  InputAbstractionLayer.hpp  InputContext.hpp  InputRaw.hpp  InputTypes.hpp  Renderer.hpp  UserInterface.hpp  WaveGPUSimulation.hpp  WaveSimulation.hpp
include/weq/utility/: GlmHelper.hpp  HashMap.hpp  IntegerTypes.hpp  NumberTypes.hpp  Profiler.hpp  ThreadHelper.hpp
include/weq/vars/: Vars.hpp
res/: GPUDEBUG  OpenGL.vars  System.vars  TODO.txt  drop.frag  edge.frag  force.frag  force.vert  fragment.frag  height.frag  input.config  scene.frag  scene.vert  screen.frag  vel.frag  vertex.vert  wave.frag  wave.geom  wave.vert
res/shaders/: clear.frag  edge.frag  edge.vert  height.frag  normal.frag  normal.vert  reflection.frag  reflection.vert  scene.frag  scene_grid.frag  scene_grid.vert  scene_wave.frag  scene_wave.vert  screen.vert  skymap.frag  skymap.vert  vel.frag
res/textures/: cloudtop_bk.tga  cloudtop_dn.tga  cloudtop_ft.tga  cloudtop_lf.tga  cloudtop_rt.tga  cloudtop_up.tga  miramar_ft.tga  miramar_lf.tga  miramar_up.tga
src/glad/: glad.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp
src/weq/: Application.cpp  Camera.cpp  Cubemap.cpp  Engine.cpp  Hotloader.cpp  Node.cpp  Texture.cpp  Window.cpp  main.cpp  precompiled.cpp
src/weq/ecs/: Component.cpp  Event.cpp  System.cpp
src/weq/gl/: Context.hpp  Cubemap.cpp  ErrorHandler.cpp  Framebuffer.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp  VertexFormat.cpp
src/weq/memory/: ResourceManager.cpp
src/weq/system/: Camera.cpp  DebugDraw.cpp  Hotloader.cpp  Input.cpp  InputAbstractionLayer.cpp  Renderer.cpp  UserInterface.cpp  WaveGPUSimulation.cpp  WaveSimulation.cpp
src/weq/utility/: Profiler.cpp
src/weq/vars/: Vars.cpp
tests/: CMakeLists.txt  CircularListTest.cpp  EntityManagerTest.cpp  EventTest.cpp  PoolAllocatorTest.cpp  SignalTest.cpp  SystemTest.cpp
